Tue Apr 13 17:11:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_component.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        * TAO_IDL/be_include/be_component.h:
        * TAO_IDL/be_include/be_visitor_component/servant_svs.h:
        
          - Changed the scanning mechanism in the component node
            to increment unsigned long members for all port kinds
            (uses multiple and read-write attribute members are
            still boolean flags).
            
          - Removed duplicate mechanism to the above in the servant
            source visitor.
            
          - Moved the generation of get_all_emitters() outside the
            check for existence of emit port(s). If there are no
            emit ports, the method returns a sequence (of emitter
            description structs) of length 0. If the LwCCM option
            is passed to the IDL compiler, this method is not
            generated, and the base class method (returning a null
            pointer) is visible instead.

Tue Apr 13 12:56:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Generate populate_port_table with LwCCM, we need it at this
          moment

Tue Apr 13 12:05:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Enabled some code for provides and lwccm, this has to be
          reworked, not all this functionality is needed for lwccm

Tue Apr 13 10:03:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Simplified code generation because there is no receptacle