@@ -72,7 +72,7 @@ be_visitor_context_svh::visit_component (be_component *node)
       << be_nl;
 
   AST_Decl::NodeType nt = this->node_->node_type ();
-  bool is_connector = (nt == AST_Decl::NT_connector);
+  bool const is_connector = (nt == AST_Decl::NT_connector);
   bool no_events = false;
 
   if (!is_connector)
@@ -83,7 +83,7 @@ be_visitor_context_svh::visit_component (be_component *node)
          && node->n_publishes () == 0UL);
     }
 
-  bool de_facto = (is_connector || no_events);
+  bool const de_facto = (is_connector || no_events);
 
   os_ << "typedef ::CIAO::"
       << (de_facto ? "Connector_" : "")
